--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #001b4d;
+$secondary-color: #f8ce12;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
@@ -9,7 +9,7 @@ $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #001b4d; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
