--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -39,7 +39,7 @@ a:hover {
 }
 
 .text-color-main {
-  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  background-color: $primary-color;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
@@ -51,5 +51,6 @@ a:hover {
 
   &:hover {
     transform: translateX(2px);
+    background-color: $secondary-color;
   }
 }
