--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -23,23 +23,22 @@
 
 /* Hero Style */
 .cta-btn--hero {
-  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  background-color: $primary-color;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  border-width: 2px;
-  border-style: solid;
-  border-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  border: 2px solid $primary-color;
   border-image-slice: 1;
   cursor: pointer;
   // Responsive Button hero style
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $secondary-color;
-    -webkit-text-fill-color: $secondary-color;
+    border: 2px solid $primary-color;
+    -webkit-text-fill-color: $primary-color;
   }
 
   &::after {
-    background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+    background-color: $primary-color;
+    color: $secondary-color;
     // Responsive Button hero style
     @include respond(phone) {
       background-image: none;
@@ -47,8 +46,10 @@
   }
 
   &:hover {
-    -webkit-text-fill-color: $white-color;
+    -webkit-text-fill-color: $secondary-color;
     text-decoration: none;
+    background-color: $primary-color;
+    color: $secondary-color;
     // Responsive Button hover hero style
     @include respond(phone) {
       -webkit-text-fill-color: $secondary-color;
@@ -66,11 +67,14 @@
   border: 2px solid $white-color;
 
   &::after {
-    background: $white-color;
+    background: $secondary-color;
+
   }
 
   &:hover {
-    color: $secondary-color;
+    color: $primary-color;
+    background: $secondary-color;
+    border: 2px solid $primary-color;
     text-decoration: none;
 
     &::after {
